--- a/packages/devextreme/scss/widgets/material/form/_index.scss
+++ b/packages/devextreme/scss/widgets/material/form/_index.scss
@@ -29,7 +29,7 @@
   > .dx-scrollable-wrapper {
     > .dx-scrollable-container {
       margin-left: -10px;
-      padding-left: 10px;
+      padding-left: $material-form-default-padding;
     }
   }
 }
@@ -48,7 +48,7 @@
       padding-inline-start: 20px;
     }
 
-    padding-bottom: 10px;
+    padding-bottom: $material-form-default-padding;
     font-size: $material-form-label-font-size;
 
 
@@ -63,7 +63,10 @@
 .dx-form > .dx-layout-manager.dx-layout-manager-one-col {
   .dx-field-item {
     .dx-field-item.dx-last-row:not(.dx-last-col) {
-      padding-bottom: 10px;
+      padding-bottom: $material-form-default-padding;
+    }
+    &:not(:first-child) .dx-single-column-item-content > .dx-field-item {
+      padding-top: $material-form-default-padding;
     }
   }
 }
